k8s/platform/security/trivy/trivy-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trivy-zero-trust
  namespace: security
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: trivy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8080
  egress:
    # TRIVY NECESITA INTERNET PARA DESCARGAR LA DB DE VULNERABILIDADES
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              # Excluir redes internas del clúster para evitar fuga de datos
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
